# track_creator

./: .gitignore  Cargo.toml  README.md  app.toml.example  config.toml
.github/workflows/: release.yml
migrations/: 20241203015207_creator.down.sql  20241203015207_creator.up.sql
src/: config.rs  lib.rs  logger.rs  main.rs  modules.rs  tasks.rs
